2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Additional_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Additional_Remarks__c</fullName>
    <label>Additional Remarks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>