2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Agent Name)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>