2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Air_Freight_per_KG__c.field-meta.xml
<CustomField>
    <fullName>Air_Freight_per_KG__c</fullName>
    <label>Air Freight (per KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>