2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Crated_Items__c.field-meta.xml
<CustomField>
    <fullName>Crated_Items__c</fullName>
    <label>Crated Items</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>