2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Crating_Charges_2__c.field-meta.xml
<CustomField>
    <fullName>Crating_Charges_2__c</fullName>
    <label>Crating Charges</label>
    <type>TextArea</type>
</CustomField>