2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>CASE (MONTH(TODAY()),
1, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Jan&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
2, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Feb&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
3, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Mar&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
4, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Apr&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
5, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;May&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
6, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Jun&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
7, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Jul&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
8, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Aug&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
9, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Sep&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
10, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Oct&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
11, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Nov&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
12, TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp; &quot;Dec&quot; &amp; &quot; &quot; &amp; TEXT(YEAR(TODAY())),
&quot;none&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Text</type>
</CustomField>