2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Estimated_Volume_2_Sea_cuft_net__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume_2_Sea_cuft_net__c</fullName>
    <formula>Estimated_Volume_2_Sea_lbs_net__c / 6.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Volume 2 (Sea - cuft net)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>