2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Estimated_Volume_Air_lbs_net__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume_Air_lbs_net__c</fullName>
    <label>Estimated Volume (Air - lbs net)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>