2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <formula>(Quote_Amount__c - Quote_Amount_rollup__c ) / Quote_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>