2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Mode_2__c.field-meta.xml
<CustomField>
    <fullName>Mode_2__c</fullName>
    <label>Mode 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20&apos; FCL</fullName>
            </value>
            <value>
                <fullName>40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>40 HC</fullName>
            </value>
            <value>
                <fullName>Liftvan loaded via LCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>