2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Ocean_Freight__c.field-meta.xml
<CustomField>
    <fullName>Ocean_Freight__c</fullName>
    <label>Ocean Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>