2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/OS_2_Sea__c.field-meta.xml
<CustomField>
    <fullName>OS_2_Sea__c</fullName>
    <label>Origin Services 2 (Sea)</label>
    <type>TextArea</type>
</CustomField>