2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/OS_Air__c.field-meta.xml
<CustomField>
    <fullName>OS_Air__c</fullName>
    <label>Origin Services (Air)</label>
    <type>TextArea</type>
</CustomField>