2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Pack_Load_Date_Sea__c.field-meta.xml
<CustomField>
    <fullName>Pack_Load_Date_Sea__c</fullName>
    <label>Pack &amp; Load Date (Sea)</label>
    <type>Date</type>
</CustomField>