2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Quote_Amount_rollup__c.field-meta.xml
<CustomField>
    <fullName>Quote_Amount_rollup__c</fullName>
    <label>Internal Cost</label>
    <summarizedField>SFDC_520_QuoteLine__c.Ext_Net_Price__c</summarizedField>
    <summaryForeignKey>SFDC_520_QuoteLine__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>