2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Request_Approval__c.field-meta.xml
<CustomField>
    <fullName>Request_Approval__c</fullName>
    <formula>&quot;none&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Approval</label>
    <type>Text</type>
</CustomField>