2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Shipper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>