2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Shuttle_Service_Included__c.field-meta.xml
<CustomField>
    <fullName>Shuttle_Service_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check - Included
Uncheck - Excluded</inlineHelpText>
    <label>Shuttle Service Included</label>
    <type>Checkbox</type>
</CustomField>