2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Shuttle_Services__c.field-meta.xml
<CustomField>
    <fullName>Shuttle_Services__c</fullName>
    <formula>Estimated_Volume_Sea_lbs__c  / 100 * Unit_Price_Shuttle_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shuttle Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>