2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/SIT__c.field-meta.xml
<CustomField>
    <fullName>SIT__c</fullName>
    <label>SIT</label>
    <type>TextArea</type>
</CustomField>