2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Unit_Price_Shuttle_Service__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Shuttle_Service__c</fullName>
    <label>Unit Price (Shuttle - per 100 lbs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>