2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>TextArea</type>
</CustomField>