2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/recordTypes/Agent_Quote_Air.recordType-meta.xml
<RecordType>
    <fullName>Agent_Quote_Air</fullName>
    <active>true</active>
    <description>Agent Quote (Air)</description>
    <label>Agent Quote (Air)</label>
</RecordType>