2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/recordTypes/Agent_Quote_Air_Sea.recordType-meta.xml
<RecordType>
    <fullName>Agent_Quote_Air_Sea</fullName>
    <active>true</active>
    <description>Agent Quote (Air, Sea)</description>
    <label>Agent Quote (Air, Sea)</label>
</RecordType>