2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/recordTypes/Agent_Quote_Air_Sea_Additional_Charges.recordType-meta.xml
<RecordType>
    <fullName>Agent_Quote_Air_Sea_Additional_Charges</fullName>
    <active>true</active>
    <description>Agent Quote (Air, Sea, Additional Charges)</description>
    <label>Agent Quote (Air, Sea, Additional Charges)</label>
</RecordType>