2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/recordTypes/Agent_Quote_Sea_x_2.recordType-meta.xml
<RecordType>
    <fullName>Agent_Quote_Sea_x_2</fullName>
    <active>true</active>
    <description>Agent Quote (Sea x 2)</description>
    <label>Agent Quote (Sea x 2)</label>
</RecordType>