2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Opportunity__c</columns>
    <columns>Agent_Name__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>